fix bug with overflow-y

--- a/www/css/main.pcss
+++ b/www/css/main.pcss
@@ -295,6 +295,11 @@ body {
 
 
 
+@media screen and (min-width: 1051px) {
+    body {
+        overflow-y: scroll !important;
+    }
+}
 
 @media screen and (min-width: 2000px) {
     .wrapper {
